exports[`CallNoteSteps CallQuality 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#003035",
          "fontFamily": "Brandon Text",
          "fontSize": 13,
          "textAlign": "center",
        },
        Array [
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400",
          },
          Object {
            "margin": 25,
            "marginBottom": 50,
          },
        ],
      ]
    }>
    Rate the call quality
  </Text>
  <View
    style={
      Object {
        "flex": 2,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 13,
            "textAlign": "center",
          },
          Object {
            "color": "#9fb1b3",
            "fontSize": 14,
            "marginLeft": 24,
            "marginRight": 24,
          },
        ]
      }>
      Please help us improve our service by letting us know what the call quality was like.
    </Text>
    <ScrollView>
      <View>
        <View
          style={
            Object {
              "flex": 1,
              "marginLeft": 40,
              "marginRight": 40,
            }
          }>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            hitSlop={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#dfe5e6",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 18,
                "paddingTop": 18,
              }
            }
            testID={undefined}>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#003035",
                    "fontFamily": "Brandon Text",
                    "fontSize": 13,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#003035",
                    "fontSize": 18,
                  },
                ]
              }>
              Excellent
            </Text>
            <Image
              source={1}
              style={
                Object {
                  "height": 32,
                  "width": 32,
                }
              } />
          </View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            hitSlop={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#dfe5e6",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 18,
                "paddingTop": 18,
              }
            }
            testID={undefined}>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#003035",
                    "fontFamily": "Brandon Text",
                    "fontSize": 13,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#003035",
                    "fontSize": 18,
                  },
                ]
              }>
              Ok
            </Text>
            <Image
              source={1}
              style={
                Object {
                  "height": 32,
                  "width": 32,
                }
              } />
          </View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            hitSlop={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#dfe5e6",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 18,
                "paddingTop": 18,
              }
            }
            testID={undefined}>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#003035",
                    "fontFamily": "Brandon Text",
                    "fontSize": 13,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#003035",
                    "fontSize": 18,
                  },
                ]
              }>
              Couldn\'t hear
            </Text>
            <Image
              source={1}
              style={
                Object {
                  "height": 32,
                  "width": 32,
                }
              } />
          </View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            hitSlop={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#dfe5e6",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 18,
                "paddingTop": 18,
              }
            }
            testID={undefined}>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#003035",
                    "fontFamily": "Brandon Text",
                    "fontSize": 13,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#003035",
                    "fontSize": 18,
                  },
                ]
              }>
              Call dropped
            </Text>
            <Image
              source={1}
              style={
                Object {
                  "height": 32,
                  "width": 32,
                }
              } />
          </View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            hitSlop={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#dfe5e6",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 18,
                "paddingTop": 18,
              }
            }
            testID={undefined}>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#003035",
                    "fontFamily": "Brandon Text",
                    "fontSize": 13,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#003035",
                    "fontSize": 18,
                  },
                ]
              }>
              Delays
            </Text>
            <Image
              source={1}
              style={
                Object {
                  "height": 32,
                  "width": 32,
                }
              } />
          </View>
        </View>
      </View>
    </ScrollView>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "flex-end",
      }
    }>
    <View
      style={
        Object {
          "flexDirection": "row",
          "margin": 16,
        }
      }>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffbcbc",
              "borderColor": "red",
              "borderWidth": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 10,
              "width": 300,
            },
            undefined,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "margin": 20,
            }
          }>
          TouchableNativeFeedback is not supported on this platform!
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffbcbc",
              "borderColor": "red",
              "borderWidth": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 10,
              "width": 300,
            },
            undefined,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "margin": 20,
            }
          }>
          TouchableNativeFeedback is not supported on this platform!
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`CallNoteSteps Completed 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#003035",
          "fontFamily": "Brandon Text",
          "fontSize": 13,
          "textAlign": "center",
        },
        Array [
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400",
          },
          Object {
            "margin": 25,
            "marginBottom": 50,
          },
        ],
      ]
    }>
    Did you achieve the objective?
  </Text>
  <View
    style={
      Object {
        "flex": 3,
      }
    }>
    <View
      style={
        Object {
          "flexDirection": "row",
          "height": 64,
          "justifyContent": "space-around",
        }
      }>
      <Image
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hitSlop={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        source={1}
        style={undefined}
        testID={undefined} />
      <Image
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hitSlop={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        source={1}
        style={undefined}
        testID={undefined} />
    </View>
    <View
      style={
        Object {
          "borderColor": "#dfe5e6",
          "borderWidth": 1,
          "flex": 1,
          "margin": 24,
        }
      }>
      <ScrollView>
        <View
          style={
            Object {
              "paddingBottom": 29,
            }
          }>
          <View
            style={
              Object {
                "backgroundColor": "#f9fafa",
                "borderColor": "#dfe5e6",
                "height": 72,
                "justifyContent": "center",
                "paddingLeft": 24,
                "paddingRight": 24,
              }
            }>
            <Image
              source={1}
              style={
                Object {
                  "height": 40,
                  "position": "absolute",
                  "resizeMode": "contain",
                  "top": 16,
                  "width": 40,
                }
              } />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#003035",
                    "fontFamily": "Brandon Text",
                    "fontSize": 13,
                    "textAlign": "center",
                  },
                  Array [
                    Object {},
                    Object {
                      "color": "#80979a",
                      "fontFamily": "Brandon Text_bold",
                      "fontSize": 12,
                      "fontWeight": "bold",
                    },
                  ],
                ]
              }>
              OBJECTIVE
            </Text>
          </View>
          <View
            style={
              Object {
                "paddingLeft": 24,
                "paddingRight": 24,
              }
            }>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#003035",
                    "fontFamily": "Brandon Text",
                    "fontSize": 13,
                    "textAlign": "center",
                  },
                  Object {
                    "fontSize": 18,
                    "paddingBottom": 12,
                    "paddingTop": 18,
                    "textAlign": "left",
                  },
                ]
              }>
              None
            </Text>
          </View>
        </View>
      </ScrollView>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "flex-end",
      }
    }>
    <View
      style={
        Object {
          "flexDirection": "row",
          "margin": 16,
        }
      }>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffbcbc",
              "borderColor": "red",
              "borderWidth": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 10,
              "width": 300,
            },
            undefined,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "margin": 20,
            }
          }>
          TouchableNativeFeedback is not supported on this platform!
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 5,
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#f77040",
              "borderWidth": 1,
            },
            Array [
              Object {
                "marginLeft": 0,
                "marginRight": 0,
              },
              Object {
                "flex": 1,
              },
            ],
            Object {
              "borderColor": "#dfe5e6",
            },
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 13,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "marginBottom": 17,
                  "marginTop": 15,
                },
                Object {
                  "color": "#f77040",
                },
                Object {
                  "color": "#dfe5e6",
                },
              ],
            ]
          }>
          NEXT
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`CallNoteSteps Mood 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#003035",
          "fontFamily": "Brandon Text",
          "fontSize": 13,
          "textAlign": "center",
        },
        Array [
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400",
          },
          Object {
            "margin": 25,
            "marginBottom": 50,
          },
        ],
      ]
    }>
    How was your Mentee today?
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "center",
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "margin": 10,
        }
      }
      testID={undefined}>
      <Image
        source={1}
        style={
          Object {
            "height": 77,
            "width": 77,
          }
        }>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(0, 0, 0, 0.2)",
                "borderRadius": 77,
                "height": 77,
                "width": 77,
              },
              false,
            ]
          } />
      </Image>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "color": "#003035",
              "fontSize": 18,
            },
          ]
        }>
        Happy
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "margin": 10,
        }
      }
      testID={undefined}>
      <Image
        source={1}
        style={
          Object {
            "height": 77,
            "width": 77,
          }
        }>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(0, 0, 0, 0.2)",
                "borderRadius": 77,
                "height": 77,
                "width": 77,
              },
              false,
            ]
          } />
      </Image>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "color": "#003035",
              "fontSize": 18,
            },
          ]
        }>
        Sad
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "margin": 10,
        }
      }
      testID={undefined}>
      <Image
        source={1}
        style={
          Object {
            "height": 77,
            "width": 77,
          }
        }>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(0, 0, 0, 0.2)",
                "borderRadius": 77,
                "height": 77,
                "width": 77,
              },
              false,
            ]
          } />
      </Image>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "color": "#003035",
              "fontSize": 18,
            },
          ]
        }>
        Bored
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "margin": 10,
        }
      }
      testID={undefined}>
      <Image
        source={1}
        style={
          Object {
            "height": 77,
            "width": 77,
          }
        }>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(0, 0, 0, 0.2)",
                "borderRadius": 77,
                "height": 77,
                "width": 77,
              },
              false,
            ]
          } />
      </Image>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "color": "#003035",
              "fontSize": 18,
            },
          ]
        }>
        Confused
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "margin": 10,
        }
      }
      testID={undefined}>
      <Image
        source={1}
        style={
          Object {
            "height": 77,
            "width": 77,
          }
        }>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(0, 0, 0, 0.2)",
                "borderRadius": 77,
                "height": 77,
                "width": 77,
              },
              false,
            ]
          } />
      </Image>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "color": "#003035",
              "fontSize": 18,
            },
          ]
        }>
        Upset
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "margin": 10,
        }
      }
      testID={undefined}>
      <Image
        source={1}
        style={
          Object {
            "height": 77,
            "width": 77,
          }
        }>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(0, 0, 0, 0.2)",
                "borderRadius": 77,
                "height": 77,
                "width": 77,
              },
              false,
            ]
          } />
      </Image>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "color": "#003035",
              "fontSize": 18,
            },
          ]
        }>
        Withdrawn
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "flex-end",
      }
    }>
    <View
      style={
        Object {
          "flexDirection": "row",
          "margin": 16,
        }
      }>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffbcbc",
              "borderColor": "red",
              "borderWidth": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 10,
              "width": 300,
            },
            undefined,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "margin": 20,
            }
          }>
          TouchableNativeFeedback is not supported on this platform!
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffbcbc",
              "borderColor": "red",
              "borderWidth": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 10,
              "width": 300,
            },
            undefined,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "margin": 20,
            }
          }>
          TouchableNativeFeedback is not supported on this platform!
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`CallNoteSteps Rating 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#003035",
          "fontFamily": "Brandon Text",
          "fontSize": 13,
          "textAlign": "center",
        },
        Array [
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400",
          },
          Object {
            "margin": 25,
            "marginBottom": 50,
          },
        ],
      ]
    }>
    Was the activity helpful in facilitating your discussion?
  </Text>
  <View
    style={
      Object {
        "flex": 2,
      }
    }>
    <ScrollView>
      <View>
        <View
          style={
            Object {
              "flex": 1,
              "marginLeft": 40,
              "marginRight": 40,
            }
          }>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            hitSlop={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#dfe5e6",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 18,
                "paddingTop": 18,
              }
            }
            testID={undefined}>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#003035",
                    "fontFamily": "Brandon Text",
                    "fontSize": 13,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#003035",
                    "fontSize": 18,
                  },
                ]
              }>
              Not at all
            </Text>
            <Image
              source={1}
              style={
                Object {
                  "height": 32,
                  "width": 32,
                }
              } />
          </View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            hitSlop={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#dfe5e6",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 18,
                "paddingTop": 18,
              }
            }
            testID={undefined}>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#003035",
                    "fontFamily": "Brandon Text",
                    "fontSize": 13,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#003035",
                    "fontSize": 18,
                  },
                ]
              }>
              A little
            </Text>
            <Image
              source={1}
              style={
                Object {
                  "height": 32,
                  "width": 32,
                }
              } />
          </View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            hitSlop={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#dfe5e6",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 18,
                "paddingTop": 18,
              }
            }
            testID={undefined}>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#003035",
                    "fontFamily": "Brandon Text",
                    "fontSize": 13,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#003035",
                    "fontSize": 18,
                  },
                ]
              }>
              Somewhat
            </Text>
            <Image
              source={1}
              style={
                Object {
                  "height": 32,
                  "width": 32,
                }
              } />
          </View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            hitSlop={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#dfe5e6",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 18,
                "paddingTop": 18,
              }
            }
            testID={undefined}>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#003035",
                    "fontFamily": "Brandon Text",
                    "fontSize": 13,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#003035",
                    "fontSize": 18,
                  },
                ]
              }>
              Quite a bit
            </Text>
            <Image
              source={1}
              style={
                Object {
                  "height": 32,
                  "width": 32,
                }
              } />
          </View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            hitSlop={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#dfe5e6",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 18,
                "paddingTop": 18,
              }
            }
            testID={undefined}>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#003035",
                    "fontFamily": "Brandon Text",
                    "fontSize": 13,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#003035",
                    "fontSize": 18,
                  },
                ]
              }>
              A lot
            </Text>
            <Image
              source={1}
              style={
                Object {
                  "height": 32,
                  "width": 32,
                }
              } />
          </View>
        </View>
      </View>
    </ScrollView>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "flex-end",
      }
    }>
    <View
      style={
        Object {
          "flexDirection": "row",
          "margin": 16,
        }
      }>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffbcbc",
              "borderColor": "red",
              "borderWidth": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 10,
              "width": 300,
            },
            undefined,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "margin": 20,
            }
          }>
          TouchableNativeFeedback is not supported on this platform!
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffbcbc",
              "borderColor": "red",
              "borderWidth": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 10,
              "width": 300,
            },
            undefined,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "margin": 20,
            }
          }>
          TouchableNativeFeedback is not supported on this platform!
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`CallNoteSteps Reflections 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#003035",
          "fontFamily": "Brandon Text",
          "fontSize": 13,
          "textAlign": "center",
        },
        Array [
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400",
          },
          Object {
            "margin": 25,
            "marginBottom": 50,
          },
        ],
      ]
    }>
    Please share your reflections of the discussion
  </Text>
  <View>
    <View
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#dfe5e6",
            "marginBottom": 27,
            "marginLeft": 24,
            "marginRight": 24,
          },
          false,
        ]
      }>
      <TextInput
        multiline={true}
        onBlur={[Function]}
        onChange={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Type your answer here"
        placeholderTextColor="#c0cbcc"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
              "fontSize": 18,
              "lineHeight": 28,
              "marginBottom": 8,
              "padding": 0,
            },
            Object {
              "height": 32,
            },
          ]
        }
        underlineColorAndroid="transparent"
        value="Walk in silence" />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "flex-end",
      }
    }>
    <View
      style={
        Object {
          "flexDirection": "row",
          "margin": 16,
        }
      }>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 5,
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#f77040",
              "borderWidth": 1,
            },
            Array [
              Object {
                "marginLeft": 0,
                "marginRight": 0,
              },
              Object {
                "marginRight": 16,
                "width": 58,
              },
            ],
            Object {
              "borderColor": "#dfe5e6",
            },
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 13,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "marginBottom": 17,
                  "marginTop": 15,
                },
                Object {
                  "color": "#f77040",
                },
                Object {
                  "color": "#dfe5e6",
                },
              ],
            ]
          }>
          <Image
            source={1}
            style={
              Array [
                Object {
                  "height": 24,
                  "width": 24,
                },
                Object {},
              ]
            } />
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffbcbc",
              "borderColor": "red",
              "borderWidth": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 10,
              "width": 300,
            },
            undefined,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "margin": 20,
            }
          }>
          TouchableNativeFeedback is not supported on this platform!
        </Text>
      </View>
    </View>
  </View>
</View>
`;
